[package]
name                    = "pinner"
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "MIT"
rust-version            = "1.59.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/pinner"
repository              = "https://github.com/cosmicexplorer/pinner"

[dependencies]
